Corrections necessaire pour l'adapter a Django==3.2.10

--- a/wejob/templates/wejob/annonce_base.html
+++ b/wejob/templates/wejob/annonce_base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}"{% if LANGUAGE_BIDI %} dir="rtl"{% endif %}>
-{% load i18n  staticfiles %}
+{% load i18n  static %}
 {% load account %}
 {% user_display user %}
 
