--- a/wejob/templates/wejob/annonce_form.html
+++ b/wejob/templates/wejob/annonce_form.html
@@ -1,5 +1,5 @@
 {% extends "wejob/annonce_base.html" %}
-{% load i18n bootstrap account staticfiles %}
+{% load i18n bootstrap account static %}
 {% user_display user %}
 
 
